feature(gradle): improved and fixed launching